# hpo_tools

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  poetry_pyproject.toml  pyproject.toml  setup.cfg
.circleci/: config.yml
.github/workflows/: python-package.yml  test_and_lint.yml
hpo_tools/: annotation.py  mp_utils.py  ontology.py  ontology_new.py  tmp.py
hpo_tools/no_numba/: set_similarity.py  set_utils.py  term_similarity.py
hpo_tools/with_numba/: p_vals.py  set_similarity.py  set_utils.py  term_similarity.py
tests/: test_ontology.py
