[tool.poetry]
name = "hpo-tools"
version = "0.1.0"
description = "A set of tools to simplify interaction with HPO ontology."
authors = ["Odessit007 <igor.vustyanyuk@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Odessit007/hpo_tools"
keywords = [
    "Phenotypes",
    "Ontology",
    "HPO"
]
packages = [{include = "hpo_tools"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pronto = "^2.5.4"
numba = "^0.56.4"
numpy = "^1.23"
pandas = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pre-commit = "^3.2.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
files = [
    "hpo_tools",
    "tests"
]
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

