[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=5.0.4",
    "mypy>=1.2.0",
    "pytest>=7.3.1",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.3.1",
    "jupyter>=1.0.0",
]

[project]
name = "hpo_tools"
version = "0.1.0"
description = "A set of tools to simplify interaction with HPO ontology."
authors = [
    {name = "Odessit007", email = "igor.vustyanyuk@gmail.com"},
]
dependencies = [
    "numba>=0.57.0",
    "numpy>=1.24.3",
    "obonet>=1.0.0",
]
requires-python = ">=3.8,<3.12"
readme = "README.md"
license = {text = "GPL-3.0-only"}
[project.optional-dependencies]
optional = [
    "requests>=2.30.0",
    "memory-profiler>=0.61.0",
    "matplotlib>=3.7.1",
    "pronto>=2.5.4",
]
extras = [
    "dgl>=1.1.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hpo_tools"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
files = [
    "hpo_tools",
    "tests"
]
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
